# fstd2nc

./: .gitignore  Changelog  LICENSE  MANIFEST.in  Makefile  README  README.md  README_fr.md  __init__.py  bmf.c  bmf.py  compress.c  compress.h  cp_bins.sh  cp_libs.sh  fstd.py  fstd2dap.py  fstd2nc  fstd2nc.py  fstd2nc_extra.py  fstd_core.c  fstd_pygeode.py  fstdump.py  geophy.c  geophy.py  io.c  io.h  pixi.toml  pixi_notes.md  pyproject.toml  quadrule.c  quadrule.h  rpn.c  rpn.h  rpn.py  rules.mk  sample_meta.ini  set_igs.F90  set_igs.ftn90  setup.py  (+1 more)
cccbuffer/: __init__.py  __main__.py  _xarray_hook.py  cccdump.py
cccbuffer/mixins/: categories.py  ccc.py  char.py  grid.py  levels.py  superlabels.py  times.py
conda.recipe/: README.md  build.sh  meta.yaml  recipe.yaml  variants.yaml
debian/: changelog  control  copyright  rules
fstd2nc/: __init__.py  __main__.py  _xarray_hook.py  dap.py  extra.py  inspector.py  stdout.py
fstd2nc/locale/: Makefile  README.md  fr_CA.po
fstd2nc/mixins/: __init__.py  accum.py  array.py  ascii.py  compat.py  dates.py  diaghacks.py  ensembles.py  extern.py  filter.py  fstd.py  gridhacks.py  interp.py  iter.py  masks.py  mesh.py  misc.py  netcdf.py  pruneaxes.py  removestuff.py  select.py  series.py  sfc_codes.py  vardict.py  vcoords.py  xmeta.py  xycoords.py
fstd2nc/tests/: test_inspector.py
fstd2nc_locale/: Makefile
pygeode/formats/: fstd.py
pygeode/plugins/rpn/: bmf.py  geophy.py  rpn.py
